assets/css/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@charset "utf-8";

@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
@import "minimal-mistakes"; // main partials

.page__title {
    line-height: initial; // Resets spacing so multi-line H1 titles look better.
}

// styling for nested lists

ol ol li {
    list-style: lower-alpha;
}

ol ol ol li {
    list-style: lower-roman;
}

